<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">aes256</string>
    <string name="action_settings">Settings</string>
    <string name="button_send">send</string>
    <string name="send_result">Response Result : </string>
    <string name="plain_text">Plain Text :</string>
    <string name="encrypt">encrypt</string>
    <string name="encrypt_result">Encrypted Result : </string>

</resources>
